--- a/README.ipynb
+++ b/README.ipynb
@@ -61,7 +61,9 @@
     "\n",
     "Where $\\sigma_0$ denotes the neighbourhood radius at iteration $t=0$, $t$ is the current iteration. We define $\\sigma_0$ (the initial radius) and $\\lambda$ (the time constant) as below:\n",
     "\n",
-    "$$sigma_0 = \\frac{\\max(width,height)}{2} \\qquad \\lambda = \\frac{n}{\\log(radius_0)} $$\n",
+    "$$\\sigma_0 = \\frac{\\max(width,height)}{2} \\qquad \\lambda = \\frac{n}{\\log(radius_0)} $$\n",
+    "\n",
+    "Where $width$ & $height$ are the width and height of the grid.\n",
     "\n",
     "### Calculating the Learning Rate\n",
     "\n",
