--- a/README.ipynb
+++ b/README.ipynb
@@ -17,6 +17,8 @@
     "### Structure\n",
     "A network has a width and a height that descibes the grid of nodes.  For example, the grid may be 4x4, and so there would be 16 nodes.\n",
     "\n",
+    "Each node has a weight for each value in the input vector.  A weight is simply a float value that the node multiplies the input value by to determine how influential it is (see below)\n",
+    "\n",
     "Each node has a set of weights that match the size of the input vector.  For example, if the input vector has 10 elements, each node would have 10 weights.\n",
     "\n",
     "### Training \n",
@@ -34,13 +36,13 @@
     "\n",
     "To determine the best matching unit, one method is to iterate through all the nodes and calculate the Euclidean distance between each node's weight vector and the current input vector. The node with a weight vector closest to the input vector is tagged as the BMU.\n",
     "\n",
-    "The Euclidean distance is given as (using Pythagoras):\n",
+    "The Euclidean distance $\\mathsf{distance}_{i}$ (from the input vector $V$ to the $i$th node's weights $W_i$)is given as (using Pythagoras):\n",
     "\n",
-    "$$Distance=\\sqrt{\\sum_{i=0}^{i=n}(V_i - W_i)^2}$$\n",
+    "$$ \\mathsf{distance}_{i}=\\sqrt{\\sum_{k=0}^{k=n}(V_k - W_{i_k})^2}$$\n",
     "\n",
-    "where V is the current input vector and W is the node's weight vector. \n",
+    "where V is the current input vector and $W_i$ is the node's weight vector.  $n$ is the size of the input & weight vector.\n",
     "\n",
-    "*Note*: $V$ and $W$ are vectors.  $V_i$ and $W_i$ represent the i'th value within those vectors.  \n",
+    "*Note*: $V$ and $W$ are vectors.  $V$ is the input vector, and $W_i$ is the weight vector of the $i$th node.  $V_k$ and $W_{i_k}$ represent the $k$'th value within those vectors.  \n",
     "\n",
     "The BMU is the node with the minimal distance for the current input vector\n",
     "\n",
@@ -53,7 +55,7 @@
     "A unique feature of the Kohonen learning algorithm is that the area of the neighbourhood shrinks over time. To do this we use the exponential decay function:\n",
     "\n",
     "Given a desired number of training iterations $n$:\n",
-    "$$n = 100$$\n",
+    "$$n_{\\mathsf{max iterations}} = 100$$\n",
     "\n",
     "Calculate the radius $\\sigma_t$ at iteration number $t$:\n",
     "\n",
@@ -61,13 +63,13 @@
     "\n",
     "Where $\\sigma_0$ denotes the neighbourhood radius at iteration $t=0$, $t$ is the current iteration. We define $\\sigma_0$ (the initial radius) and $\\lambda$ (the time constant) as below:\n",
     "\n",
-    "$$\\sigma_0 = \\frac{\\max(width,height)}{2} \\qquad \\lambda = \\frac{n}{\\log(radius_0)} $$\n",
+    "$$\\sigma_0 = \\frac{\\max(width,height)}{2} \\qquad \\lambda = \\frac{n_{\\mathsf{max iterations}}}{\\log(radius_0)} $$\n",
     "\n",
     "Where $width$ & $height$ are the width and height of the grid.\n",
     "\n",
     "### Calculating the Learning Rate\n",
     "\n",
-    "We define the initial leanring rate $\\alpha_0$ at iteration = 0 as:\n",
+    "We define the initial leanring rate $\\alpha_0$ at iteration $t = 0$ as:\n",
     "$$\\alpha_0 = 0.1$$\n",
     "\n",
     "So, we can calculate the learning rate at a given iteration t as:\n",
@@ -78,19 +80,29 @@
     "        \n",
     "### Calculating the Influence\n",
     "\n",
-    "As well as the learning rate, we need to calculate the influence $\\theta_t$ of the learning/training at a given iteration $t$.  The influence decays over time according to:\n",
+    "As well as the learning rate, we need to calculate the influence $\\theta_t$ of the learning/training at a given iteration $t$.  \n",
     "\n",
-    "$$\\theta_t = \\exp \\left( - \\frac{dist^2}{2\\sigma_t^2} \\right) $$\n",
+    "So for each node, we need to caclulate the euclidian distance $d_i$ from the BMU to that node.  Similar to when we calculate the distance to find the BMU, we use Pythagoras.  The current ($i$th) node's weights are given by $W_i$, and the BMU's weights are given by $Z$\n",
     "\n",
-    "Where $dist$ is the euclidian distance a node is from the BMU and $\\sigma_t$ is the neighbourhood radius at iteration $t$ as calculated above. \n",
+    "$$ \\d_{i}=\\sqrt{\\sum_{k=0}^{k=n}(W_{i_k} - Z_k)^2}$$\n",
+    "\n",
+    "Then, the influence decays over time according to:\n",
+    "\n",
+    "$$\\theta_t = \\exp \\left( - \\frac{d_{i}^2}{2\\sigma_t^2} \\right) $$\n",
+    "\n",
+    "Where $d_{bmu}$ is the euclidian distance a node is from the BMU and $\\sigma_t$ is the neighbourhood radius at iteration $t$ as calculated above. \n",
+    "\n",
+    "Similar to the distance from the input vector to the node (calculated above), we use Pythagoras to calculate the distance from the BMU to the current node:\n",
+    "\n",
+    "$$d_{bmu} =\\sqrt{\\sum_{i=0}^{i=n}(W_i - BMUW_i)^2}$$\n",
     "\n",
     "### Updating the Weights\n",
     "\n",
     "To update the weights of a given node, we use:\n",
     "\n",
-    "$$W_{t+1} = W_t + \\alpha_t \\theta_t (V_t - W_t)$$\n",
+    "$$W_{i_{t+1}} = W_{i_t} + \\alpha_t \\theta_t (V_t - W_{i_t})$$\n",
     "        \n",
-    "So $W_{t+1}$ is the new value of the weight, $V_t$ is the current value of the training data, $W_t$ is the current weight and $\\alpha_t$ and $\\theta_t$ are the learning rate and influence calculated above.\n",
+    "So $W_{i_{t+1}}$ is the new value of the weight for the $i$th node, $V_t$ is the current value of the training data, $W_{i_t}$ is the current weight and $\\alpha_t$ and $\\theta_t$ are the learning rate and influence calculated above.\n",
     "\n",
     "*Note*: the $W$ and $V$ are vectors \n",
     "\n",
@@ -134,9 +146,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python on Kubernetes",
    "language": "python",
-   "name": "python3"
+   "name": "python_kubernetes"
   },
   "language_info": {
    "codemirror_mode": {
@@ -148,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
