--- a/kohonen.ipynb
+++ b/kohonen.ipynb
@@ -82,15 +82,17 @@
     "\n",
     "As well as the learning rate, we need to calculate the influence $\\theta_t$ of the learning/training at a given iteration $t$.  \n",
     "\n",
-    "So for each node, we need to caclulate the euclidian distance $d_i$ from the BMU to that node.  Similar to when we calculate the distance to find the BMU, we use Pythagoras.  The current ($i$th) node's weights are given by $W_i$, and the BMU's weights are given by $Z$\n",
+    "So for each node, we need to caclulate the euclidean distance $d_i$ from the BMU to that node.  Similar to when we calculate the distance to find the BMU, we use Pythagoras.  The current ($i$th) node's x position is given by $x(W_i)$, and the BMU's x position is, likewise, given by $x(Z)$.  Similarly, $y()$ returns the y position of a node.\n",
     "\n",
-    "$$ d_{i}=\\sqrt{\\sum_{k=0}^{k=n}(W_{i_k} - Z_k)^2}$$\n",
+    "$$ d_{i}=\\sqrt{(x(W_i) - x(Z))^2 + (y(W_i) - y(Z))^2} $$\n",
     "\n",
     "Then, the influence decays over time according to:\n",
     "\n",
     "$$\\theta_t = \\exp \\left( - \\frac{d_{i}^2}{2\\sigma_t^2} \\right) $$\n",
     "\n",
     "Where $\\sigma_t$ is the neighbourhood radius at iteration $t$ as calculated above. \n",
+    "\n",
+    "Note: You will need to come up with an approach to x() and y().\n",
     "\n",
     "\n",
     "### Updating the Weights\n",
@@ -273,9 +275,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python on Kubernetes",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python_kubernetes"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -287,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
